tests/parsing/smtlib/v2.6/errors/078_define-funs-rec_bad_fun_decl_1.expected
File "tests/parsing/smtlib/v2.6/errors/078_define-funs-rec_bad_fun_decl_1.smt2", line 2, character 18-19:
2 | (define-funs-rec (_))
                      ^
Error while parsing a recursive functions definition,
      read the reserved word '_',
      but expected a function declaration of the form "(name (sort*) sort)".
